# periodic-atlas

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  zz-decomposition-plan.md
elements/: Ac.yaml  Ag.yaml  Al.yaml  Am.yaml  Ar.yaml  At.yaml  Au.yaml  B.yaml  Ba.yaml  Be.yaml  Bh.yaml  Bi.yaml  Bk.yaml  Br.yaml  C.yaml  Ca.yaml  Cd.yaml  Ce.yaml  Cf.yaml  Cl.yaml  Cm.yaml  Cn.yaml  Co.yaml  Cr.yaml  Cs.yaml  Cu.yaml  Db.yaml  Ds.yaml  Dy.yaml  Er.yaml  Eu.yaml  F.yaml  Fe.yaml  Fl.yaml  Fr.yaml  Ga.yaml  Gd.yaml  Ge.yaml  H.yaml  He.yaml  (+67 more)
scripts/: build.py  build_viewer.py  validate.py  verify_report.py
specs/: README.md  byproduct-graph.md  country-page.md  heatmap.md  table-filter-sort.md
src/atlas/: __init__.py  models.py
tests/: conftest.py  test_build.py  test_build_viewer.py  test_models.py  test_verify_report.py
verification/: Ac.md  Ag.md  Al.md  Am.md  Ar.md  Au.md  B.md  Ba.md  Be.md  Bi.md  Bk.md  Br.md  C.md  Ca.md  Cd.md  Ce.md  Cf.md  Cl.md  Cm.md  Co.md  Cr.md  Cs.md  Cu.md  Dy.md  Er.md  Eu.md  F.md  Fe.md  Ga.md  Gd.md  Ge.md  H.md  He.md  Hf.md  Hg.md  Ho.md  I.md  In.md  Ir.md  K.md  (+51 more)
viewer/: about.html  byproducts-data.json  byproducts.html  index.html
viewer/assets/: atlas.css  charts_byproduct_graph.js  charts_country.js  charts_isotopes.js  charts_map.js  charts_prices.js  charts_production.js  charts_reserves.js  table_filter.js  table_sort.js
viewer/countries/: AE.html  AM.html  AR.html  AT.html  AU.html  AZ.html  BE.html  BF.html  BG.html  BH.html  BI.html  BO.html  BR.html  BT.html  BY.html  CA.html  CD.html  CI.html  (+86 more)
(+107 files in other folders)
