[project]
name = "atlas"
version = "0.2.0"
description = "Periodic element supply chain atlas — structured data snapshot"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "duckdb>=1.1",
    "rich>=13.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas"]

[tool.ruff]
line-length = 144
target-version = "py312"
